--- a/style/style.css
+++ b/style/style.css
@@ -3,8 +3,14 @@
     margin: 0;
     padding: 0;
     overflow: visible;
-}body, html {
+}
+body, html {
     width: 100%;
     height: 100%;
     background-color: #dfe6e9;
+    color: #2d3436;
+    font-family: 'Montserrat', sans-serif;
+}
+.logo {
+    font-family: 'Lobster Two', cursive;
 }
