--- a/style.css
+++ b/style.css
@@ -15,5 +15,11 @@ body, html {
     font-family: 'Lobster Two', cursive;
 }
 .header-img {
-    min-width:100%
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50%;
+    margin-right: -50%;
+    max-width: 100vh;
+    width: 100vh;
 }
