--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body, html {
     position: relative;
     left: 50%;
     right: 50%;
-    margin-left: -50%;
-    margin-right: -50%;
-    max-width: 100vh;
-    width: 100vh;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    width: 100vw;
 }
