--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body, html {
 .logo {
     font-family: 'Lobster Two', cursive;
     padding: 50%;
+    background-color: #a29bfe;
+    color: #dfe6e9;
 }
 .header-img {
     position: relative;
