--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body, html {
     padding: 50%;
     background-color: #a29bfe;
     color: #dfe6e9;
+    border-radius: 50%;
 }
 .header-img {
     position: relative;
