--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body, html {
     color: #dfe6e9;
     border-radius: 50%;
 }
-.header-img {
+.full-width {
     position: relative;
     left: 10%;
     right: 10%;
