--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body, html {
     font-family: 'Montserrat', sans-serif;
 }
 .logo {
+    position: fixed;
     font-family: 'Lobster Two', cursive;
     padding: 5%;
     background-color: #a29bfe;
