--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html {
 .logo {
     position: fixed;
     font-family: 'Lobster Two', cursive;
-    padding: 1%;
+    padding: 1% 5%;
     background-color: #a29bfe;
     color: #dfe6e9;
     border-radius: 50%;
