--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body, html {
     width: 350px;
     height: 350px;
 }
-.full-width {
+.full {
     position: relative;
     left: 50%;
     right: 50%;
@@ -28,4 +28,10 @@ body, html {
     margin-right: -50vw;
     max-width: 100vw;
     width: 100vw;
+    top: 50%;
+    bottom: 50%;
+    margin-top: -50vh;
+    margin-bottom: -50vh;
+    max-height: 100vh;
+    height: 100vh;
 }
