--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body, html {
     height: 350px;
 }
 .full {
-    position: relative;
+    position: static;
     left: 50%;
     right: 50%;
     margin-left: -50vw;
