--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body, html {
 }
 .logo {
     position: relative;
+    transform: translate(50%,50%);
     font-family: 'Lobster Two', cursive;
     background-color: #a29bfe;
     color: #dfe6e9;
