--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
     font-family: 'Montserrat', sans-serif;
 }
 .logo {
-    position: relative;
+    position: absolute;
     transform: translate(50%,50%);
     font-family: 'Lobster Two', cursive;
     background-color: #a29bfe;
@@ -20,6 +20,10 @@ body, html {
     border-radius: 50%;
     width: 50px;
     height: 50px;
+}
+.logo > h1 {
+    position: absolute;
+
 }
 .full {
     position: relative;
