--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body, html {
 }
 .logo {
     position: absolute;
+    top: 10%;
+    right: 10%;
     transform: translate(50%,50%);
     font-family: 'Lobster Two', cursive;
     background-color: #a29bfe;
