--- a/style.css
+++ b/style.css
@@ -14,4 +14,8 @@ body, html {
 .box {
     padding: 10%;
     background-color: #a29bfe;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
