--- a/style.css
+++ b/style.css
@@ -22,4 +22,8 @@ body, html {
 footer {
     position: absolute;
     bottom: 0;
+    background-color: #2d3436;
+    color: #dfe6e9;
+    width: 100%;
+    height: 10px;
 }
