--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
     background-color: #2d3436;
     color: #dfe6e9;
     width: 100%;
-    height: 10px;
+    height: 10%;
 }
 h1, h2 {
     text-align: center;
