--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ footer {
     background-color: #2d3436;
     color: #dfe6e9;
     width: 100%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding: 1%;
 }
 h1, h2 {
     text-align: center;
