--- a/style.css
+++ b/style.css
@@ -11,22 +11,212 @@ body, html {
     color: #2d3436;
     font-family: 'Montserrat', sans-serif;
 }
-.box {
-    padding: 10%;
-    background-color: #a29bfe;
+h1 {
+    font-size: 5em;
+}
+h2 {
+    font-size: 3em;
+    padding-left: 5%;
+    padding-top: 5%;
+}
+h3 {
+    font-size: 2em;
+}
+h4 {
+    font-size: 1.7em;
+}
+h5 {
+    font-size: 1.5em;
+}
+h6 {
+    font-size: 1em;
+}
+p,
+a {
+    font-size: .7em;
+}
+.logo {
     position: absolute;
+    top: 10%;
+    left: 10%;
+    font-family: 'Lobster Two', cursive;
+    background-color: #a29bfe;
+    color: #dfe6e9;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+.logo h1 {
+    font-size: 3em;
+    position: relative;
+    transform: translate(10%,120%);
+}
+.full {
+    position: relative;
+    display: block;
     left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    width: 100vw;
+    max-height: 100vh;
+    height: 100vh;
+}
+section {
+    position: relative;
+    display: block;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    min-height: 100vh;
+}
+nav {
+    position: absolute;
+    top: 15%;
+    right: 10%;
+    width: 60%;
+}
+nav ul li a,
+nav ul li a:visited {
+    font-size: 1em;
+    font-weight: 800;
+    text-decoration: none;
+    color: #2d3436;
+
+}
+nav ul li a:hover,
+nav ul li a:active {
+    color: #a29bfe;
+    text-decoration: underline;
+}
+
+nav ul {
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+}
+.headline {
+    position: absolute;
     top: 50%;
+    left: 50%;
+    text-align: center;
     transform: translate(-50%,-50%);
+    color: #dfe6e9;
+    background-color: rgba(162, 155, 254,0.7);
+    padding: 5%;
+    border-radius: 10px;
+}
+#instructors,
+#courses {
+    justify-content: center;
+    height: auto;
+
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #b2bec3;
+    width: 30%;
+    padding: 5%;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 5%;
+}
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-bottom: 1%;
+}
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.instructor-img {
+    margin-top: 10%;
+}
+.instructor-img img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+.instructor-img h4,
+.instructor-img h3 {
+    text-align: center;
+}
+#signup .flex {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+}
+.btn,
+.btn:visited {
+    color: #6c5ce7;
+    width: 15em;
+    height: 5em;
+    background-color: #b2bec3;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transform: translateY(150%);
+}
+.btn:active,
+.btn:hover {
+    background-color: #6c5ce7;
+    color: #dfe6e9;
+}
+.btn h3 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(50%);
+}
+.points {
+    background-color: rgba(162, 155, 254,0.7);
+    border-radius: 10px;
+    padding: 5%;
+}
+#contact {
+    background-color: #636e72;
+    color: #dfe6e9;
+}
+#contact a,
+#contact a:active {
+    color: #dfe6e9;
 }
 footer {
-    position: absolute;
-    bottom: 0;
+    padding: 1%;
     background-color: #2d3436;
     color: #dfe6e9;
-    width: 100%;
-    padding: 1%;
 }
-h1, h2 {
-    text-align: center;
+footer img {
+    width: 20px;
+    height: 20px;
+    fill: #dfe6e9;
+}
+.footer-img {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
