--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ nav ul {
 }
 .instructor-img img {
     width: 250px;
-    height: 250px;
+    height: auto;
     border-radius: 50%;
 }
 .instructor-img h4,
